# TestTask

./: .env  alembic.ini  pyproject.toml
app/: config.py  main.py
app/api/: auth.py  current_salary.py  salary_increase.py  users.py
app/db/: database.py  models.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2024_05_04_1437-ce9a44b7575b_init_db.py
app/schemas/: auth.py  current_salary.py  salary_increase.py  user.py
app/services/: auth.py  current_salary.py  salary_increase.py  user.py
app/utils/: decode_token.py  only_for_admin.py  password_hash.py  token.py
