[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["funnysrussianigoryan\\funnysrussianigoryan <select12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
